deleting duplicate get twitter and yahoo data files

--- a/wl/oil_price-daily.ipynb
+++ b/wl/oil_price-daily.ipynb
@@ -753,9 +753,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('dev': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37764bitdevconda93a3ea63d6d54fc298e1fc7486ad0faf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
