adding b_presentation_1st_pass file

--- a/Brett/get_twitter_data.ipynb
+++ b/Brett/get_twitter_data.ipynb
@@ -77,7 +77,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# websites used to get twitter accounts to look at\n",
+    "# https://www.offshore-technology.com/features/top-influencers-in-oil-and-gas/\n",
+    "# https://www.benzinga.com/markets/commodities/15/02/5252239/10-oil-experts-to-follow-on-twitter"
+   ]
   },
   {
    "cell_type": "markdown",
