final run minus some clean up

--- a/Jimmy/Initial_Look_At_Data.ipynb
+++ b/Jimmy/Initial_Look_At_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -108,20 +108,12 @@
     "base_path = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
     "p = base_path + \"\\\\data\\\\\"\n",
     "print(p)\n",
-    "# dfCrudePrices, intSuccess = read_csv(Path(p,strFile), 'Date', '')\n",
-    "dfMonlthlyPrices = create_Monthly_Avg(Path(p,strFile), 'Date', ['Price','Open','High','Low','Vol.'])\n",
-    "# if intSuccess == 1:\n",
-    "#     print(Path(p,strFile))\n",
-    "#     print(dfMonlthlyPrices.head())\n",
-    "# #     dfMonlthlyPrices.plot(figsize=(7,5))\n",
-    "# #     dfCrudePrices.plot(figsize=(7,5))\n",
-    "# else:\n",
-    "#     print('Tough luck sucker')"
+    "dfMonlthlyPrices = create_Monthly_Avg(Path(p,strFile), 'Date', ['Price','Open','High','Low','Vol.'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +223,7 @@
        "2002-01-01  19.729048  19.793810  20.191429  19.297619         99.080112"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +398,7 @@
        "2002-01-01  19.729048  19.793810  20.191429  19.297619   5909"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +574,7 @@
        "2002-01-01  19.729048  19.793810  20.191429  19.297619   1698"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
