--- a/Jimmy/model_selector-continuous.ipynb
+++ b/Jimmy/model_selector-continuous.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -63,219 +63,200 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>price</th>\n",
-       "      <th>uup</th>\n",
-       "      <th>gdp</th>\n",
-       "      <th>prod</th>\n",
-       "      <th>vader</th>\n",
-       "      <th>textblob_polarity</th>\n",
-       "      <th>change</th>\n",
+       "      <th>price_p</th>\n",
+       "      <th>price_u</th>\n",
+       "      <th>uup_p</th>\n",
+       "      <th>uup_u</th>\n",
+       "      <th>prod_p</th>\n",
+       "      <th>prod_u</th>\n",
+       "      <th>rigcount_p</th>\n",
+       "      <th>rigcount_u</th>\n",
+       "      <th>HousingStarts_p</th>\n",
+       "      <th>HousingStarts_u</th>\n",
+       "      <th>daily_return</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3045</th>\n",
-       "      <td>2010-09-01</td>\n",
-       "      <td>73.91</td>\n",
-       "      <td>23.19</td>\n",
-       "      <td>99.65</td>\n",
-       "      <td>5562.00</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0.027670</td>\n",
+       "      <th>0</th>\n",
+       "      <td>58.340</td>\n",
+       "      <td>0.646025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.631364</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.698592</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.605780</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.704836</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3046</th>\n",
-       "      <td>2010-09-02</td>\n",
-       "      <td>75.02</td>\n",
-       "      <td>23.17</td>\n",
-       "      <td>99.65</td>\n",
-       "      <td>5563.03</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>0.015018</td>\n",
+       "      <th>1</th>\n",
+       "      <td>56.740</td>\n",
+       "      <td>0.646045</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.631468</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.698591</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.605781</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.704836</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.027425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3047</th>\n",
-       "      <td>2010-09-03</td>\n",
-       "      <td>74.60</td>\n",
-       "      <td>23.05</td>\n",
-       "      <td>99.66</td>\n",
-       "      <td>5564.07</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>-0.005599</td>\n",
+       "      <th>2</th>\n",
+       "      <td>55.590</td>\n",
+       "      <td>0.646056</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.631541</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.698591</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.605782</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.704836</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.020268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3048</th>\n",
-       "      <td>2010-09-04</td>\n",
-       "      <td>74.47</td>\n",
-       "      <td>23.11</td>\n",
-       "      <td>99.66</td>\n",
-       "      <td>5565.10</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>-0.02</td>\n",
-       "      <td>-0.001743</td>\n",
+       "      <th>3</th>\n",
+       "      <td>54.190</td>\n",
+       "      <td>0.645897</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.631574</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.698591</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.605783</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.704836</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.025184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3049</th>\n",
-       "      <td>2010-09-05</td>\n",
-       "      <td>74.34</td>\n",
-       "      <td>23.18</td>\n",
-       "      <td>99.66</td>\n",
-       "      <td>5566.13</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>-0.02</td>\n",
-       "      <td>-0.001746</td>\n",
+       "      <th>4</th>\n",
+       "      <td>53.415</td>\n",
+       "      <td>0.645529</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.631639</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.698591</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.605784</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.704836</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.014302</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            date  price    uup    gdp     prod  vader  textblob_polarity  \\\n",
-       "3045  2010-09-01  73.91  23.19  99.65  5562.00   0.26              -0.00   \n",
-       "3046  2010-09-02  75.02  23.17  99.65  5563.03   0.25              -0.01   \n",
-       "3047  2010-09-03  74.60  23.05  99.66  5564.07   0.25              -0.01   \n",
-       "3048  2010-09-04  74.47  23.11  99.66  5565.10   0.24              -0.02   \n",
-       "3049  2010-09-05  74.34  23.18  99.66  5566.13   0.23              -0.02   \n",
+       "    price   price_p  price_u     uup_p  uup_u    prod_p  prod_u  rigcount_p  \\\n",
+       "0  58.340  0.646025      0.0  0.631364    0.0  0.698592     0.0    0.605780   \n",
+       "1  56.740  0.646045      1.0  0.631468    1.0  0.698591    -1.0    0.605781   \n",
+       "2  55.590  0.646056      1.0  0.631541    1.0  0.698591    -1.0    0.605782   \n",
+       "3  54.190  0.645897      1.0  0.631574    1.0  0.698591    -1.0    0.605783   \n",
+       "4  53.415  0.645529     -1.0  0.631639    1.0  0.698591    -1.0    0.605784   \n",
        "\n",
-       "        change  \n",
-       "3045  0.027670  \n",
-       "3046  0.015018  \n",
-       "3047 -0.005599  \n",
-       "3048 -0.001743  \n",
-       "3049 -0.001746  "
+       "   rigcount_u  HousingStarts_p  HousingStarts_u  daily_return  \n",
+       "0         0.0         0.704836              0.0     -0.000856  \n",
+       "1         1.0         0.704836              0.0     -0.027425  \n",
+       "2         1.0         0.704836              0.0     -0.020268  \n",
+       "3         1.0         0.704836             -1.0     -0.025184  \n",
+       "4         1.0         0.704836              0.0     -0.014302  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file = Path('wl/df_all.csv')\n",
-    "s_path = Path('Data/df_all_2019_2020.csv')\n",
-    "df_all_2019_2020 = pd.read_csv(file, parse_dates=True, infer_datetime_format=True)\n",
-    "df_all_2019_2020 = df_all_2019_2020.loc[(df_all_2019_2020['date'] >= '2010-08-31') & (df_all_2019_2020['date'] < '2020-03-01')]\n",
-    "df_all_2019_2020 = df_all_2019_2020.round(decimals=2)\n",
-    "df_all_2019_2020['change'] = df_all_2019_2020['price'].pct_change()\n",
-    "df_all_2019_2020 = df_all_2019_2020.dropna(subset=['change'])\n",
-    "df_all_2019_2020.head()\n"
+    "file = Path('rnn_results.csv')\n",
+    "df = pd.read_csv(file, parse_dates=True, infer_datetime_format=True)\n",
+    "# df = df.rename(columns={'Unnamed: 0': 'date'})\n",
+    "df.drop(columns=['Unnamed: 0'], axis=1, inplace=True)\n",
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>uup</th>\n",
-       "      <th>gdp</th>\n",
-       "      <th>prod</th>\n",
-       "      <th>vader</th>\n",
-       "      <th>textblob_polarity</th>\n",
-       "      <th>up/down</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3045</th>\n",
-       "      <td>2010-09-01</td>\n",
-       "      <td>23.19</td>\n",
-       "      <td>99.65</td>\n",
-       "      <td>5562.00</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3046</th>\n",
-       "      <td>2010-09-02</td>\n",
-       "      <td>23.17</td>\n",
-       "      <td>99.65</td>\n",
-       "      <td>5563.03</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3047</th>\n",
-       "      <td>2010-09-03</td>\n",
-       "      <td>23.05</td>\n",
-       "      <td>99.66</td>\n",
-       "      <td>5564.07</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3048</th>\n",
-       "      <td>2010-09-04</td>\n",
-       "      <td>23.11</td>\n",
-       "      <td>99.66</td>\n",
-       "      <td>5565.10</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>-0.02</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3049</th>\n",
-       "      <td>2010-09-05</td>\n",
-       "      <td>23.18</td>\n",
-       "      <td>99.66</td>\n",
-       "      <td>5566.13</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>-0.02</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            date    uup    gdp     prod  vader  textblob_polarity  up/down\n",
-       "3045  2010-09-01  23.19  99.65  5562.00   0.26              -0.00        1\n",
-       "3046  2010-09-02  23.17  99.65  5563.03   0.25              -0.01        1\n",
-       "3047  2010-09-03  23.05  99.66  5564.07   0.25              -0.01        0\n",
-       "3048  2010-09-04  23.11  99.66  5565.10   0.24              -0.02        0\n",
-       "3049  2010-09-05  23.18  99.66  5566.13   0.23              -0.02        0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    price   price_p  price_u     uup_p  uup_u    prod_p  prod_u  rigcount_p  \\\n",
+      "0  58.340  0.646025      0.0  0.631364    0.0  0.698592     0.0    0.605780   \n",
+      "1  56.740  0.646045      1.0  0.631468    1.0  0.698591    -1.0    0.605781   \n",
+      "2  55.590  0.646056      1.0  0.631541    1.0  0.698591    -1.0    0.605782   \n",
+      "3  54.190  0.645897      1.0  0.631574    1.0  0.698591    -1.0    0.605783   \n",
+      "4  53.415  0.645529     -1.0  0.631639    1.0  0.698591    -1.0    0.605784   \n",
+      "\n",
+      "   rigcount_u  HousingStarts_p  HousingStarts_u  daily_return  up/down  \n",
+      "0         0.0         0.704836              0.0     -0.000856        0  \n",
+      "1         1.0         0.704836              0.0     -0.027425        0  \n",
+      "2         1.0         0.704836              0.0     -0.020268        0  \n",
+      "3         1.0         0.704836             -1.0     -0.025184        0  \n",
+      "4         1.0         0.704836              0.0     -0.014302        0  \n"
+     ]
     }
    ],
    "source": [
-    "df_all_2019_2020.loc[df_all_2019_2020['change'] < 0, 'up/down'] = 0 \n",
-    "df_all_2019_2020.loc[df_all_2019_2020['change'] >= 0, 'up/down'] = 1\n",
-    "# df_all_2019_2020.loc[df_all_2019_2020['change'] == 0, 'up/down'] = 0\n",
-    "df_all_2019_2020.drop(columns=['price','change'], inplace=True)\n",
-    "df_all_2019_2020['up/down']= df_all_2019_2020['up/down'].astype(int)\n",
-    "df_all_2019_2020.head()"
+    "#create a binary return column\n",
+    "df.loc[df['daily_return'] < 0, 'up/down'] = 0 \n",
+    "df.loc[df['daily_return'] >= 0, 'up/down'] = 1\n",
+    "df['up/down']= df['up/down'].astype(int)\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: [0, 1, 2, 3, 4]\n",
+      "    price_p     uup_p    prod_p  rigcount_p  HousingStarts_p  up/down\n",
+      "0  0.646025  0.631364  0.698592    0.605780         0.704836        0\n",
+      "1  0.646045  0.631468  0.698591    0.605781         0.704836        0\n",
+      "2  0.646056  0.631541  0.698591    0.605782         0.704836        0\n",
+      "3  0.645897  0.631574  0.698591    0.605783         0.704836        0\n",
+      "4  0.645529  0.631639  0.698591    0.605784         0.704836        0\n",
+      "   price_u  uup_u  prod_u  rigcount_u  HousingStarts_u  up/down\n",
+      "0      0.0    0.0     0.0         0.0              0.0        0\n",
+      "1      1.0    1.0    -1.0         1.0              0.0        0\n",
+      "2      1.0    1.0    -1.0         1.0              0.0        0\n",
+      "3      1.0    1.0    -1.0         1.0             -1.0        0\n",
+      "4     -1.0    1.0    -1.0         1.0              0.0        0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#save price and return in separate df\n",
+    "df_price_return = df.filter(['price, daily_return'], axis=1)\n",
+    "#save scaled data separately\n",
+    "df_min_max = df[['price_p', 'uup_p', 'prod_p', 'rigcount_p', 'HousingStarts_p', 'up/down']]\n",
+    "#save rnn data separately\n",
+    "df_rnn = df[['price_u', 'uup_u', 'prod_u', 'rigcount_u', 'HousingStarts_u', 'up/down']]\n",
+    "\n",
+    "print(df_price_return.head())\n",
+    "print(df_min_max.head())\n",
+    "print(df_rnn.head())"
    ]
   },
   {
