--- a/wl/create_df_all.ipynb
+++ b/wl/create_df_all.ipynb
@@ -47,7 +47,7 @@
     "        'world petroleum consumption', \n",
     "        'u.s. petroleum consumption',\n",
     "        'value',\n",
-    "        'textblob polarity']"
+    "        'textblob polarity', 'RigCount']"
    ]
   },
   {
@@ -1755,9 +1755,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('dev': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37764bitdevconda93a3ea63d6d54fc298e1fc7486ad0faf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1769,7 +1769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
