--- a/wl/rnn_random_forest.ipynb
+++ b/wl/rnn_random_forest.ipynb
@@ -3122,162 +3122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>price_p</th>\n",
-       "      <th>price_u</th>\n",
-       "      <th>uup_p</th>\n",
-       "      <th>uup_u</th>\n",
-       "      <th>gdp_p</th>\n",
-       "      <th>gdp_u</th>\n",
-       "      <th>prod_p</th>\n",
-       "      <th>prod_u</th>\n",
-       "      <th>vader_p</th>\n",
-       "      <th>vader_u</th>\n",
-       "      <th>daily_return</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-01-21</th>\n",
-       "      <td>58.340</td>\n",
-       "      <td>54.794693</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>58.067745</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>55.347778</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>57.468933</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>56.715595</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.000856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-22</th>\n",
-       "      <td>56.740</td>\n",
-       "      <td>54.720161</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.062435</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.347843</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.472210</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.744057</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.027425</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-23</th>\n",
-       "      <td>55.590</td>\n",
-       "      <td>54.654404</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.058880</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.347908</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.475529</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.762302</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.020268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-24</th>\n",
-       "      <td>54.190</td>\n",
-       "      <td>54.590900</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.057930</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.347969</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.478870</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.767380</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.025184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-25</th>\n",
-       "      <td>53.415</td>\n",
-       "      <td>54.521435</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.053261</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.348026</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.482227</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.774784</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.014302</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             price    price_p  price_u      uup_p  uup_u      gdp_p  gdp_u  \\\n",
-       "date                                                                         \n",
-       "2020-01-21  58.340  54.794693      0.0  58.067745    0.0  55.347778    0.0   \n",
-       "2020-01-22  56.740  54.720161     -1.0  58.062435   -1.0  55.347843    1.0   \n",
-       "2020-01-23  55.590  54.654404     -1.0  58.058880   -1.0  55.347908    1.0   \n",
-       "2020-01-24  54.190  54.590900     -1.0  58.057930   -1.0  55.347969    1.0   \n",
-       "2020-01-25  53.415  54.521435     -1.0  58.053261   -1.0  55.348026    1.0   \n",
-       "\n",
-       "               prod_p  prod_u    vader_p  vader_u  daily_return  \n",
-       "date                                                             \n",
-       "2020-01-21  57.468933     0.0  56.715595      0.0     -0.000856  \n",
-       "2020-01-22  57.472210     1.0  56.744057      1.0     -0.027425  \n",
-       "2020-01-23  57.475529     1.0  56.762302      1.0     -0.020268  \n",
-       "2020-01-24  57.478870     1.0  56.767380      1.0     -0.025184  \n",
-       "2020-01-25  57.482227     1.0  56.774784      1.0     -0.014302  "
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop NAs and replace positive/negative infinity values\n",
     "trading_signals_df.dropna(subset=x_var_list, inplace=True)\n",
@@ -3288,294 +3135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>price_p</th>\n",
-       "      <th>price_u</th>\n",
-       "      <th>uup_p</th>\n",
-       "      <th>uup_u</th>\n",
-       "      <th>gdp_p</th>\n",
-       "      <th>gdp_u</th>\n",
-       "      <th>prod_p</th>\n",
-       "      <th>prod_u</th>\n",
-       "      <th>vader_p</th>\n",
-       "      <th>vader_u</th>\n",
-       "      <th>daily_return</th>\n",
-       "      <th>Positive Return</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-01-21</th>\n",
-       "      <td>58.340</td>\n",
-       "      <td>54.794693</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>58.067745</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>55.347778</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>57.468933</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>56.715595</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.000856</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-22</th>\n",
-       "      <td>56.740</td>\n",
-       "      <td>54.720161</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.062435</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.347843</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.472210</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.744057</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.027425</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-23</th>\n",
-       "      <td>55.590</td>\n",
-       "      <td>54.654404</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.058880</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.347908</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.475529</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.762302</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.020268</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-24</th>\n",
-       "      <td>54.190</td>\n",
-       "      <td>54.590900</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.057930</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.347969</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.478870</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.767380</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.025184</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-01-25</th>\n",
-       "      <td>53.415</td>\n",
-       "      <td>54.521435</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>58.053261</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>55.348026</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.482227</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.774784</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.014302</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-23</th>\n",
-       "      <td>39.930</td>\n",
-       "      <td>46.953175</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>58.324387</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>52.712341</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>55.800362</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.627522</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.008333</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-24</th>\n",
-       "      <td>40.310</td>\n",
-       "      <td>46.994747</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>58.308655</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>52.712341</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>55.801254</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.637440</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.009517</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-25</th>\n",
-       "      <td>40.310</td>\n",
-       "      <td>47.038128</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>58.285332</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>52.712341</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>55.801800</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.650127</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-26</th>\n",
-       "      <td>40.310</td>\n",
-       "      <td>47.083080</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>58.267673</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>52.712341</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>55.802086</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.653366</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-27</th>\n",
-       "      <td>40.310</td>\n",
-       "      <td>47.128963</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>58.256912</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>52.712341</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>55.802197</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>56.655804</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>251 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             price    price_p  price_u      uup_p  uup_u      gdp_p  gdp_u  \\\n",
-       "date                                                                         \n",
-       "2020-01-21  58.340  54.794693      0.0  58.067745    0.0  55.347778    0.0   \n",
-       "2020-01-22  56.740  54.720161     -1.0  58.062435   -1.0  55.347843    1.0   \n",
-       "2020-01-23  55.590  54.654404     -1.0  58.058880   -1.0  55.347908    1.0   \n",
-       "2020-01-24  54.190  54.590900     -1.0  58.057930   -1.0  55.347969    1.0   \n",
-       "2020-01-25  53.415  54.521435     -1.0  58.053261   -1.0  55.348026    1.0   \n",
-       "...            ...        ...      ...        ...    ...        ...    ...   \n",
-       "2020-09-23  39.930  46.953175      1.0  58.324387   -1.0  52.712341    0.0   \n",
-       "2020-09-24  40.310  46.994747      1.0  58.308655   -1.0  52.712341    0.0   \n",
-       "2020-09-25  40.310  47.038128      1.0  58.285332   -1.0  52.712341    0.0   \n",
-       "2020-09-26  40.310  47.083080      1.0  58.267673   -1.0  52.712341    0.0   \n",
-       "2020-09-27  40.310  47.128963      1.0  58.256912   -1.0  52.712341    0.0   \n",
-       "\n",
-       "               prod_p  prod_u    vader_p  vader_u  daily_return  \\\n",
-       "date                                                              \n",
-       "2020-01-21  57.468933     0.0  56.715595      0.0     -0.000856   \n",
-       "2020-01-22  57.472210     1.0  56.744057      1.0     -0.027425   \n",
-       "2020-01-23  57.475529     1.0  56.762302      1.0     -0.020268   \n",
-       "2020-01-24  57.478870     1.0  56.767380      1.0     -0.025184   \n",
-       "2020-01-25  57.482227     1.0  56.774784      1.0     -0.014302   \n",
-       "...               ...     ...        ...      ...           ...   \n",
-       "2020-09-23  55.800362     1.0  56.627522      1.0      0.008333   \n",
-       "2020-09-24  55.801254     1.0  56.637440      1.0      0.009517   \n",
-       "2020-09-25  55.801800     1.0  56.650127      1.0      0.000000   \n",
-       "2020-09-26  55.802086     1.0  56.653366      1.0      0.000000   \n",
-       "2020-09-27  55.802197     1.0  56.655804      1.0      0.000000   \n",
-       "\n",
-       "            Positive Return  \n",
-       "date                         \n",
-       "2020-01-21              0.0  \n",
-       "2020-01-22              0.0  \n",
-       "2020-01-23              0.0  \n",
-       "2020-01-24              0.0  \n",
-       "2020-01-25              0.0  \n",
-       "...                     ...  \n",
-       "2020-09-23              1.0  \n",
-       "2020-09-24              1.0  \n",
-       "2020-09-25              0.0  \n",
-       "2020-09-26              0.0  \n",
-       "2020-09-27              0.0  \n",
-       "\n",
-       "[251 rows x 13 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Construct the dependent variable where if daily return is greater than 0, then 1, else, 0.\n",
     "trading_signals_df['Positive Return'] = np.where(trading_signals_df['daily_return'] > 0, 1.0, 0.0)\n",
@@ -3584,20 +3146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Start: 2020-01-21\n",
-      "Training End: 2020-08-14\n",
-      "Testing Start: 2020-08-15\n",
-      "Testing End: 2020-09-27\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Construct training start and end dates\n",
     "training_start = trading_signals_df.index.min().strftime(format= '%Y-%m-%d')\n",
@@ -5009,9 +4560,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('dev': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37764bitdevconda93a3ea63d6d54fc298e1fc7486ad0faf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5023,7 +4574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
